--- a/css/css.css
+++ b/css/css.css
@@ -1,8 +1,8 @@
 /* General styles */
 body {
     margin: 0;
-    font-family: 'Comic Sans MS', 'Comic Sans', cursive; /* Change the font-family */
-    background-color: #121A21;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #ececec;
     color: #E5E7EB;
     z-index: 0;
 }
@@ -49,8 +49,8 @@ header {
     height: 55px;
     border: 4px solid transparent;
     border-radius: 30%;
-    border-top-color: #667B8E;
-    border-right-color: #667B8E;
+    border-top-color: #2C3B4A;
+    border-right-color: #2C3B4A;
     animation: swirl 4s linear infinite;
 }
 
@@ -66,8 +66,8 @@ header {
 .page-title {
     font-size: 1.2rem;
     font-weight: bold;
-    color: #FFFFFF;
-    font-family: 'Comic Sans MS', 'Comic Sans', cursive; /* Change the font-family */
+    color: #000000;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: sticky;
     overflow: hidden; /* Ensure the text doesn't overflow */
 }
@@ -86,8 +86,8 @@ nav {
   width: -900px;
   text-align: center;
   font-size: 18px;
-  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
-  z-index: 1000;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
 }
 
 nav ul {
@@ -100,7 +100,7 @@ nav ul {
 
 nav ul li a {
   text-decoration: none;
-  color: #ffffff;
+  color: #000000;
   padding: 10px 15px;
   border-radius: 20px;
   transition: background-color 0.3s ease;
@@ -108,7 +108,7 @@ nav ul li a {
 
 nav ul li a.active,
 nav ul li a:hover {
-  background-color: #42596d;
+  background-color: #2C3B4A;
 }
 
 /* Main content styles */
@@ -118,7 +118,7 @@ main {
     align-items: center;
     padding: 40px;
     text-align: center;
-    font-family: 'Comic Sans MS', 'Comic Sans', cursive; /* Change the font-family */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .profile {
@@ -134,21 +134,21 @@ main {
     border-radius: 50%;
     object-fit: cover;
     clip-path: circle();
-    background: #fff;
+    
 }
 
 .profile-text h1 {
     margin: 0;
     font-size: 24px;
-    color: #ffffff;
+    color: #000000;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif /* Change the font-family */
 }
 
 .profile-text h2 {
     margin: 5px 0;
     font-size: 30px;
-    color: #7573f1;
-    font-family: 'Comic', 'Comic Sans', cursive; /* Change the font-family */
+    color: #2C3B4A;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: relative;
     overflow: hidden; /* Ensure the text doesn't overflow */
     gap: 10px;
@@ -161,14 +161,14 @@ main {
 .profile-text p {
     margin: 20px 0;
     font-size: 18px;
-    color: #E5E7EB;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif/* Change the font-family */
-
+    color: #000000;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
 }
 .contact-me {
     text-decoration: none;
-    color: #E5E7EB;
-    background-color: #667B8E;
+    color: #ffffff;
+    background-color: #2C3B4A;
     padding: 10px 20px;
     border-radius: 20px;
     transition: background-color 0.3s ease;
@@ -191,9 +191,7 @@ main {
 /* General styles */
 body {
     margin: 0;
-    font-family: 'Comic Sans MS', sans-serif;
-    background-color: #121A21;
-    color: #E5E7EB;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 header {
@@ -234,9 +232,9 @@ header {
 .about-page-title {
     font-size: 36px;
     font-weight: bold;
-    color: #FFFFFF;
+    color: #000000;
     margin-bottom: 30px;
-    font-family: 'Comic Sans MS', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .about-container {
@@ -274,7 +272,10 @@ header {
 
 .about-description {
     font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #E5E7EB;
+    font-weight: normal;
+
 }
 
 /* Buttons */
@@ -285,13 +286,15 @@ header {
   align-items: center;
   display: flex;
   gap: 15px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   justify-content: center; /* Center the buttons */
+
 }
 
 .button {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #768b9c;
+  background-color: #2C3B4A;
   color: #FFFFFF;
   text-decoration: none;
   font-size: 16px;
@@ -299,6 +302,7 @@ header {
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
+  font-weight: normal;
 }
 
 /* Hover Effect */
@@ -356,9 +360,9 @@ header {
 /* Main Skills Section Styling */
 .skills-section {
   padding: 40px 100px;
-  background-color: #121A21;
-  color: #fff;
-  font-family: 'Comic Sans MS', sans-serif;
+  background-color: #ececec;
+  color: #000000;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
   font-size: 20px;
   text-align: center;
@@ -381,13 +385,14 @@ header {
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.3s ease;
-  font-family: 'Comic Sans MS', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 15px;
+  font-weight: bold;
 }
 
 .tab-button.active,
 .tab-button:hover {
-  background-color: #667B8E;
+  background-color: #4b5f74;
 }
 
 .skills-content {
@@ -395,6 +400,8 @@ header {
   flex-wrap: wrap;
   gap: 15px;
   justify-content: center;
+  font-weight: normal;
+  font-size: 17px;
 }
 
 .skills-tab {
@@ -468,14 +475,14 @@ header {
 #projects {
     padding: 40px;
     text-align: center;
-    background-color: #121A21; /* Replace with your palette */
+    background-color: #ececec; /* Replace with your palette */
   }
   
   .section-title {
     font-size: 2.0rem;
     margin-bottom: 30px;
-    color: #ffffff; /* Replace with your palette */
-    font-family: 'Comic Sans MS', 'Comic Sans', cursive; /* Change the font-family */
+    color: #000000; /* Replace with your palette */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
   }
   
   /* Projects Grid */
@@ -530,10 +537,10 @@ header {
   }
   
   .project-overlay h3 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     text-transform: uppercase;
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
   }
   
   /* Responsive Design */
@@ -553,8 +560,9 @@ header {
 body, h1, p {
   margin: 0;
   padding: 0px;
-  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
-  gap: 90px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  color: #000;
 }
 
 
@@ -590,9 +598,9 @@ body, h1, p {
   border: none;
   border-radius: 20px;
   padding: 15px 35px;
-  color: #fff;
+  color: #000000;
   font-size: 1.2rem;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -604,25 +612,26 @@ body, h1, p {
   display: flex;
   align-items: center;
   gap: 10px; /* Space between icon and text */
-  background-color: #58677c;
+  background-color: #2C3B4A;
   border: none;
   border-radius: 20px;
   padding: 15px 35px;
   color: #fff;
-  font-size: 1.2rem;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 1rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  font-weight: bold;
 }
 
 
 .info-detail {
   margin-top: 10px;
-  font-size: 0.95em;
+  font-size: 0.90em;
   display: none; /* Hide by default */
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   letter-spacing: 2px; 
-  color: #ffffff;
+  color: #000000;
   transition: opacity 0.3s ease-in-out;
   opacity: 0; /* Fully transparent */
 }
@@ -650,7 +659,7 @@ body, h1, p {
 }
 
 .info-btn:hover {
-  background-color: #b1b2e9;
+  background-color: #3a5369;
   color: #ffffff;
 }
 
@@ -692,13 +701,7 @@ body, h1, p {
 footer {
     text-align: center;
     padding: 1px;
-    background-color: #121A21;
+    background-color: #ececec;
     color: #E5E7EB;
 }
-
-
-
-
-    
-
 
