--- a/css/photovideo.css
+++ b/css/photovideo.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: 'Comic Sans MS', 'Comic Sans', cursive; /* Change the font-family */
-    background-color: #121A21;
+    background-color: #ececec;
     color: #E5E7EB;
     z-index: 0;
 }
@@ -61,8 +61,8 @@ header {
 .page-title {
     font-size: 1.2rem;
     font-weight: bold;
-    color: #FFFFFF;
-    font-family: 'Comic Sans MS', 'Comic Sans', cursive; /* Change the font-family */
+    color: #000000;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: sticky;
     overflow: hidden; /* Ensure the text doesn't overflow */
 }
@@ -86,11 +86,13 @@ header {
 .back-button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #23323f;
+    background-color: #2C3B4A;
     color: #fff;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    font-weight: bold;
 }
 
 /* Introduction Section */
@@ -108,7 +110,7 @@ header {
     text-transform: uppercase;
     text-align: center;
     letter-spacing: 10px;
-    background: linear-gradient(45deg, #e5b8ff, #b197fc, #b9f2ff);
+    background: linear-gradient(45deg, #c264f8, #8e69fc, #86e6fc);
     -webkit-background-clip: text;
     background-clip: text;
     filter: drop-shadow(5px 5px 10px rgba(255, 255, 255, 0.3));
@@ -117,7 +119,7 @@ header {
 
 .intro p {
     font-size: 1.2rem;
-    color: #ffffff;
+    color: #000000;
     max-width: 800px;
     margin: 0 auto;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -132,7 +134,7 @@ header {
     justify-content: center; /* Center the grid */
     align-items: center;
     min-height: 100vh; /* Ensure it fills the viewport */
-    padding: 20px;
+    padding: 90px;
 }
 
 .row {
@@ -140,13 +142,13 @@ header {
     flex-wrap: wrap;
     justify-content: center; /* Center the items */
     padding: 0 4px;
-    max-width: 1200px; /* Limit width */
+    max-width: 1500px; /* Limit width */
 }
 
 /* Columns for the grid */
 .column {
     flex: 25%;
-    max-width: 25%;
+    max-width: 50%;
     padding: 0 8px;
 }
 
@@ -157,7 +159,12 @@ header {
     overflow: hidden;
 }
 
-.media-container img,
+.media-container img{
+     width: 100%;
+    display: block;
+    border-radius: 10px;
+}
+
 .media-container video {
     width: 100%;
     display: block;
@@ -200,10 +207,5 @@ header {
     }
 }
 
-/* Footer */
-footer {
-    text-align: center;
-    padding: 1px;
-    background-color: #121A21;
-    color: #E5E7EB;
-}
+
+
